feat(merchant): implement merchant module
